[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "integrated_rcs_analysis"
version = "0.2.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version >= "3.10"',
]


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["python"]  # ["."] by default